CSS異常を修正

--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
  <head>
   <meta charset="UTF-8">
-  <title>Seamless digital geological map of Japan</title>
+  <title>Japan GSI tiles for Cesium</title>
   <link  href="./Cesium/Widgets/widgets.css" rel="stylesheet" />
+  <link  href="./Cesium/Widgets/lighter.css" rel="stylesheet" />
+  <link  href="./bucket.css" rel="stylesheet" />
   <script src="./Cesium/Cesium.js"></script>
   <script src="./JapanGSIImageryProvider.js"></script>
   <script src="./JapanGSITerrainProvider.js"></script>
-  <style>
-    @import url(./bucket.css);
-  </style>
  </head>
  <body>
  <div id="cesiumContainer" class="fullSize"></div>
